force-app/main/default/objects/Restaurant_Menu_Item__c/Restaurant_Menu_Item__c.object-meta.xml
<CustomObject>
    <label>Restaurant Menu Item</label>
    <nameField>
        <displayFormat>No-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restaurant Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>