force-app/main/default/objects/Restaurant_Menu_Item__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <label>Menu Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Restaurant Menu Items</relationshipLabel>
    <relationshipName>Restaurant_Menu_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>