force-app/main/default/objects/Restaurant_Menu_Item__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Restaurant Menu Items</relationshipLabel>
    <relationshipName>Restaurant_Menu_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>